--- a/HealthAndCareHospital.Web/Views/_ViewImports.cshtml
+++ b/HealthAndCareHospital.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using HealthAndCareHospital.Web
+@using HealthAndCareHospital.Services
 @using HealthAndCareHospital.Data.Models
 @using HealthAndCareHospital.Data.Models.AccountViewModels
 @using HealthAndCareHospital.Data.Models.ManageViewModels
