--- a/HealthAndCareHospital.Web/Views/Home/Index.cshtml
+++ b/HealthAndCareHospital.Web/Views/Home/Index.cshtml
@@ -1,7 +1,142 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<!--/ service-->
+<!--cta-->
+<!--banner-->
+<!--/ banner-->
+<!--service-->
+<div class="container">
+    <div class="row">
+        <div class="banner-info">
+            <div class="banner-logo text-center">
+                <img src="~/Medilab/img/logo.png" class="img-responsive">
+            </div>
+            <div class="banner-text text-center">
+                <h1 class="white">Health And Care Hospital</h1>
+                <h2 class="white">We care about your healing!</h2>
+                <br>
+                <p>Our specialists are ready to take you<br>to a new level of helthcare!</p>
+                <a href="/home/contact" class="btn btn-appoint">Make an Appointment.</a>
+            </div>
+            <div class="overlay-detail text-center">
+                <a href="#"><i class="fa fa-angle-up"></i></a>
+            </div>
+        </div>
+    </div>
+</div>
+<section id="cta-1" class="section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="schedule-tab">
+                <div class="col-md-4 col-sm-4 bor-left">
+                    <div class="mt-boxy-color"></div>
+                    <div class="medi-info">
+                        <h3>Emergency Case</h3>
+                        <p>I am text block. Edit this text from Appearance / Customize / Homepage header columns. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        <a href="#" class="medi-info-btn">READ MORE</a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4">
+                    <div class="medi-info">
+                        <h3>Emergency Case</h3>
+                        <p>I am text block. Edit this text from Appearance / Customize / Homepage header columns. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        <a href="#" class="medi-info-btn">READ MORE</a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4 mt-boxy-3">
+                    <div class="mt-boxy-color"></div>
+                    <div class="time-info">
+                        <h3>Opening Hours</h3>
+                        <table style="margin: 8px 0px 0px;" border="1">
+                            <tbody>
+                                <tr>
+                                    <td>Monday - Friday</td>
+                                    <td>8.00 - 17.00</td>
+                                </tr>
+                                <tr>
+                                    <td>Saturday</td>
+                                    <td>9.30 - 17.30</td>
+                                </tr>
+                                <tr>
+                                    <td>Sunday</td>
+                                    <td>9.30 - 15.00</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--cta-->
+<!--testimonial-->
+<section id="testimonial" class="section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="ser-title">see what patients are saying?</h2>
+                <hr class="botm-line">
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="testi-details">
+                    <!-- Paragraph -->
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="testi-info">
+                    <!-- User Image -->
+                    <a href="#"><img src="~/Medilab/img/thumb.png" alt="" class="img-responsive"></a>
+                    <!-- User Name -->
+                    <h3>Alex<span>Texas</span></h3>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="testi-details">
+                    <!-- Paragraph -->
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="testi-info">
+                    <!-- User Image -->
+                    <a href="#"><img src="~/Medilab/img/thumb.png" alt="" class="img-responsive"></a>
+                    <!-- User Name -->
+                    <h3>Alex<span>Texas</span></h3>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="testi-details">
+                    <!-- Paragraph -->
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="testi-info">
+                    <!-- User Image -->
+                    <a href="#"><img src="~/Medilab/img/thumb.png" alt="" class="img-responsive"></a>
+                    <!-- User Name -->
+                    <h3>Alex<span>Texas</span></h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--/ testimonial-->
+<!--cta 2-->
+<section id="cta-2" class="section-padding">
+    <div class="container">
+        <div class=" row">
+            <div class="col-md-2"></div>
+            <div class="text-right-md col-md-4 col-sm-4">
+                <h2 class="section-title white lg-line">« A few words<br> about us »</h2>
+            </div>
+            <div class="col-md-4 col-sm-5">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a typek
+                <p class="text-right text-primary"><i>— Medilap Healthcare</i></p>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+    </div>
+</section>
+<!--cta-->
+<!--
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -106,3 +241,4 @@
         </ul>
     </div>
 </div>
+    -->
