--- a/HealthAndCareHospital.Web/Views/Home/Contact.cshtml
+++ b/HealthAndCareHospital.Web/Views/Home/Contact.cshtml
@@ -76,7 +76,7 @@
     }
 </style>
 
-<h3>My Google Maps Demo</h3>
+<h2>Find Us on the Map</h2>
 <div id="map"></div>
 <script>
     function initMap() {
