--- a/HealthAndCareHospital.Web/Views/Home/Index.cshtml
+++ b/HealthAndCareHospital.Web/Views/Home/Index.cshtml
@@ -129,7 +129,7 @@
             </div>
             <div class="col-md-4 col-sm-5">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a typek
-                <p class="text-right text-primary"><i>— Medilap Healthcare</i></p>
+                <p class="text-right text-primary"><i>— Health And Care Hospital</i></p>
             </div>
             <div class="col-md-2"></div>
         </div>
