--- a/HealthAndCareHospital.Web/Views/Shared/_Layout.cshtml
+++ b/HealthAndCareHospital.Web/Views/Shared/_Layout.cshtml
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Project Hospital</title>
-    <meta name="description" content="Project Hospital">
+    <title>Health And Care Hospital</title>
+    <meta name="description" content="Health And Care Hospital">
     <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Candal">
