--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Department/All.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Department/All.cshtml
@@ -20,7 +20,7 @@
                 {
                     <ul>
                         <li>
-                            <a class="badge bg-primary" href="/doctors/details/@doctor.Id">@doctor.Name</a>
+                            <a class="badge bg-primary" href="admin/doctor/details/@doctor.Id">@doctor.Name</a>
                         </li>
                     </ul>
                 }
@@ -53,7 +53,7 @@
                             {
                                 <ul>
                                     <li>
-                                        <a class="badge bg-primary" href="/doctors/details/@doctor.Id">@doctor.Name</a>
+                                        <a class="badge bg-primary" href="/admin/doctor/details/@doctor.Id">@doctor.Name</a>
                                     </li>
                                 </ul>
                             }
