--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Disease/Create.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Disease/Create.cshtml
@@ -1,12 +1,12 @@
-﻿@model DoctorViewModel
+﻿@model DiseaseServiceModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Disease";
 }
 
 <h2>Create</h2>
 
-<h4>Doctor</h4>
+<h4>Disease</h4>
 <hr />
 <div class="row white">
     <div class="col-md-4">
@@ -18,14 +18,9 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input required asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Speciality" class="control-label"></label>
-                <input required asp-for="Speciality" class="form-control" />
-                <span asp-validation-for="Speciality" class="text-danger"></span>
+                <label asp-for="Description" class="control-label"></label>
+                <input required asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DepartmentName" class="control-label"></label>
@@ -33,19 +28,14 @@
                 <span asp-validation-for="DepartmentName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageURL" class="control-label"></label>
-                <input asp-for="ImageURL" class="form-control" />
-                <span asp-validation-for="ImageURL" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
-<br>
+
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-action="All">Back to List</a>
 </div>
 
 @section Scripts {
