--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Doctor/All.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Doctor/All.cshtml
@@ -3,14 +3,15 @@
     ViewData["Title"] = "All";
 }
 
-@if (TempData["SuccessMesage"] != null)
-{
-    @TempData["SuccessMesage"];
-}
 <h2>Doctors</h2>
+<hr />
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-success" asp-action="Create">Create New</a>
 </p>
+@if (TempData["Message"] != null)
+{
+    <h2 class="white text-center text-capitalize">@TempData["Message"]</h2>
+}
 <table class="table white">
     <thead>
         <tr>
@@ -55,7 +56,7 @@
         }
     </tbody>
 </table>
-    <!--doctor team-->
+<!--doctor team-->
 <section id="doctor-team" class="section-padding">
     <div class="container">
         <div class="row">
