--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Doctor/Edit.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Doctor/Edit.cshtml
@@ -1,35 +1,36 @@
 ﻿@model DoctorViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 <h4>Doctor</h4>
 <hr />
 <div class="row white">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input required asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
-                <input required asp-for="Email" class="form-control" />
+                <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Speciality" class="control-label"></label>
-                <input required asp-for="Speciality" class="form-control" />
+                <input asp-for="Speciality" class="form-control" />
                 <span asp-validation-for="Speciality" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DepartmentName" class="control-label"></label>
-                <input required asp-for="DepartmentName" class="form-control" />
+                <input asp-for="DepartmentName" class="form-control" />
                 <span asp-validation-for="DepartmentName" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -38,14 +39,14 @@
                 <span asp-validation-for="ImageURL" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
-<br>
+
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-action="All">Back to List</a>
 </div>
 
 @section Scripts {
