Added Appointments and more functionality

--- a/HealthAndCareHospital.Web/Areas/Contact/Views/Shared/_Layout.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Contact/Views/Shared/_Layout.cshtml
@@ -12,16 +12,11 @@
     <link rel="stylesheet" type="text/css" href="~/Medilab/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="~/Medilab/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="~/Medilab/css/style.css">
-    <!-- =======================================================
-      Theme Name: Medilab
-      Theme URL: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/
-      Author: BootstrapMade.com
-      Author URL: https://bootstrapmade.com
-    ======================================================= -->
+
 </head>
 
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
-    <!--banner-->
+
     <section id="banner" class="banner">
         <div class="bg-color">
             <nav class="navbar navbar-default navbar-fixed-top">
@@ -89,8 +84,7 @@
             </div>
         </div>
     </section>
-    <!--/ banner-->
-    <!--footer-->
+
     <footer id="footer">
         <div class="top-footer">
             <div class="container">
@@ -136,13 +130,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <p>&copy; 2017 - ProjectHospital</p>
+                        <p>&copy; 2017 - Health And Care Hospital</p>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-    <!--/ footer-->
+
 
     <script src="~/Medilab/js/jquery.min.js"></script>
     <script src="~/Medilab/js/jquery.easing.min.js"></script>
