--- a/HealthAndCareHospital.Web/Areas/Doctor/Views/Patient/Details.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Doctor/Views/Patient/Details.cshtml
@@ -6,7 +6,7 @@
 <h2>Details</h2>
 <br>
 <p>
-    <a class="btn btn-success" asp-controller="Receipt" asp-action="Create" asp-route-name="@Model.Name">Create Receipt</a>
+    <a class="btn btn-success" asp-controller="Appointment" asp-action="Create" asp-route-name="@Model.Name">Make an Appointment</a>
 </p>
 <br>
 <div>
