--- a/HealthAndCareHospital.Web/Areas/Doctor/Views/Shared/_LoginPartial.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Doctor/Views/Shared/_LoginPartial.cshtml
@@ -6,10 +6,11 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
+    int index = UserManager.GetUserName(User).IndexOf('@');
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @(UserManager.GetUserName(User).Substring(0, index))!</a>
             </li>
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
