--- a/HealthAndCareHospital.Web/Views/_ViewImports.cshtml
+++ b/HealthAndCareHospital.Web/Views/_ViewImports.cshtml
@@ -1,6 +1,8 @@
 @using Microsoft.AspNetCore.Identity
 @using HealthAndCareHospital
 @using HealthAndCareHospital.Services
+@using HealthAndCareHospital.Services.Models.Admin
+@using HealthAndCareHospital.Services.Models.Doctor
 @using HealthAndCareHospital.Data.Models
 @using HealthAndCareHospital.Data.Models.AccountViewModels
 @using HealthAndCareHospital.Data.Models.ManageViewModels
