Added some view changes

--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -104,7 +104,7 @@
                         <div class="info-sec">
                             <ul class="quick-info">
                                 <li><a href="#"><i class="fa fa-circle"></i>Home</a></li>
-                                <li><a href="/department/all"><i class="fa fa-circle"></i>Services</a></li>
+                                <li><a href="/departments/all"><i class="fa fa-circle"></i>Services</a></li>
                                 <li><a href="/home/contact"><i class="fa fa-circle"></i>Appointment</a></li>
                             </ul>
                         </div>
