--- a/HealthAndCareHospital.Web/Views/Medicines/Details.cshtml
+++ b/HealthAndCareHospital.Web/Views/Medicines/Details.cshtml
@@ -5,11 +5,11 @@
 }
 
 <h2>Details</h2>
-
+<br>
 <div>
     <h4>Medicine</h4>
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal white">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
