--- a/HealthAndCareHospital.Web/Views/Medicines/All.cshtml
+++ b/HealthAndCareHospital.Web/Views/Medicines/All.cshtml
@@ -7,6 +7,7 @@
 <div>
     <a class="btn btn-primary" asp-controller="Home" asp-action="Index">Back to Home</a>
 </div>
+<br>
 <table class="table white">
     <thead>
         <tr>
@@ -33,10 +34,10 @@
                     @Html.DisplayFor(modelItem => item.Dosage)
                 </td>
                 <td>
-                    @(Html.DisplayFor(modelItem => item.Descritption).ToString().Substring(0 , 5))
+                    @(item.Descritption.Substring(0 , 10))...
                 </td>
                 <td>
-                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Read More</a>
                 </td>
             </tr>
         }
