--- a/HealthAndCareHospital.Web/Views/Shared/_LayoutHome.cshtml
+++ b/HealthAndCareHospital.Web/Views/Shared/_LayoutHome.cshtml
@@ -63,6 +63,7 @@
                                 @if (!this.User.Identity.IsAuthenticated)
                                 {
                                     <li class="active"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                                    <li class="active"><a asp-area="" asp-controller="Departments" asp-action="All">Departments</a></li>
                                     <li class="active"><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                                     <li class="active"><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                                 }
