Added pagination to medicines

--- a/HealthAndCareHospital.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 @using Microsoft.AspNetCore.Identity
 @using HealthAndCareHospital.Services.Models.Admin
 @using HealthAndCareHospital.Services.Models.Doctor
+@using HealthAndCareHospital.Web.Areas.Admin.Models
 @using HealthAndCareHospital.Data.Models
 @using HealthAndCareHospital.Data.Models.AccountViewModels
 @using HealthAndCareHospital.Data.Models.ManageViewModels
