--- a/HealthAndCareHospital.Web/Views/Account/Register.cshtml
+++ b/HealthAndCareHospital.Web/Views/Account/Register.cshtml
@@ -30,7 +30,7 @@
         </form>
     </div>
 
-    <div class="col-md-6 col-md-offset-2">
+    <div class="col-md-6 col-md-offset-2 text-center banner-text">
         <section>
             <svg height="130" width="500">
                 <defs>
@@ -43,6 +43,8 @@
                 <text fill="#ffffff" font-size="45" font-family="Verdana" x="50" y="86">HCH</text>
                 Sorry, your browser does not support inline SVG.
             </svg>
+            <h1 class="white">Health And Care Hospital</h1>
+            <h2 class="white">We care about your healing!</h2>
         </section>
     </div>
 </div>
