--- a/HealthAndCareHospital.Web/Views/_ViewImports.cshtml
+++ b/HealthAndCareHospital.Web/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using HealthAndCareHospital.Data.Models
 @using HealthAndCareHospital.Data.Models.AccountViewModels
 @using HealthAndCareHospital.Data.Models.ManageViewModels
+@using HealthAndCareHospital.Web.Areas.Admin.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
