--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Medicine/All.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Medicine/All.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<MedicineServiceModel>
+﻿@model MedicinePageListingModel
+
 @{
     ViewData["Title"] = "All Medicines";
 }
@@ -8,23 +9,49 @@
     <a class="btn btn-success" asp-action="Create">Create New Medecine</a>
 </p>
 <br>
+@{
+    var prev = Model.CurrentPage == 1 ? "disabled" : string.Empty;
+    var next = Model.CurrentPage == Model.TotalPages ? "disabled" : string.Empty;
+}
+
+<ul class="pagination">
+    <li class="page-item @prev">
+        <a class="page-link @prev" href="/admin/medicine/all?page=@Model.PreviousPage" 
+           aria-label="Previous">
+            <span aria-hidden="true"><<</span>
+            <span class="sr-only">Previous</span>
+        </a>
+    </li>
+    @for (int i = 1; i <= Model.TotalPages; i++)
+    {
+        <li class="page-item @(Model.CurrentPage == i ? "active" : string.Empty)">
+        <a class="page-link" href="/admin/medicine/all?page=@i">@i</a></li>
+    }
+    <li class="page-item @next">
+        <a class="page-link @next" href="/admin/medicine/all?page=@Model.NextPage" aria-label="Next">
+            <span aria-hidden="true">>></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </li>
+</ul>
+<br>
 <table class="table white">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Dosage)
+                Dosage
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Descritption)
+                Descritption
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.Medicines)
         {
             <tr>
                 <td>
@@ -34,7 +61,7 @@
                     @Html.DisplayFor(modelItem => item.Dosage)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Descritption)
+                    @(item.Descritption.Substring(0, 10))...
                 </td>
                 <td>
                     <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
