--- a/HealthAndCareHospital.Web/Views/Account/Login.cshtml
+++ b/HealthAndCareHospital.Web/Views/Account/Login.cshtml
@@ -51,7 +51,7 @@
     </div>
     <div class="col-md-6 col-md-offset-2 text-center banner-text">
         <section>
-            <svg class="top-right" height="130" width="500">
+            <svg height="130" width="500">
                 <defs>
                     <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
                         <stop offset="0%" style="stop-color:rgb(0,153,255);stop-opacity:1" />
