Added a few Unit tests

--- a/HealthAndCareHospital.Web/Areas/Contact/Views/Contact/Delete.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Contact/Views/Contact/Delete.cshtml
@@ -9,7 +9,8 @@
 <br>
 <form asp-action="Delete">
     <input type="hidden" asp-for="Id" />
-    <input type="submit" value="Delete" class="btn btn-default" />
+    <input type="submit" value="Delete" class="btn btn-danger" />
     <br>
 </form>
+<br>
 <a class="btn btn-primary" asp-action="All">Back to List</a>
