--- a/HealthAndCareHospital.Web/Areas/Contact/Views/Contact/Details.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Contact/Views/Contact/Details.cshtml
@@ -5,11 +5,14 @@
 
 <h2>Details</h2>
 <br>
+<h3>Name</h3>
 <p class="white">@Model.Name</p>
+<h3>Email</h3>
 <p class="white">@Model.Email</p>
+<h3>Subject</h3>
 <p class="white">@Model.Subject</p>
 <br>
 <h3>Message</h3>
-<p class="white">@Model.Message</p>
+<p> class="white">@Model.Message</p>
 <br>
 <a class="btn btn-primary" asp-action="All">Back to List</a>
