--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Department/Edit.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Department/Edit.cshtml
@@ -9,22 +9,22 @@
 <div class="row white">
     <div class="col-md-4">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="text-primary"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input required asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <span asp-validation-for="Name" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input required asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <span asp-validation-for="Description" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ImageURL" class="control-label"></label>
                 <input required asp-for="ImageURL" class="form-control" />
-                <span asp-validation-for="ImageURL" class="text-danger"></span>
+                <span asp-validation-for="ImageURL" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-success" />
