--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Doctor/Edit.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Doctor/Edit.cshtml
@@ -11,32 +11,32 @@
 <div class="row white">
     <div class="col-md-4">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="text-primary"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <span asp-validation-for="Name" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <span asp-validation-for="Email" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Speciality" class="control-label"></label>
                 <input asp-for="Speciality" class="form-control" />
-                <span asp-validation-for="Speciality" class="text-danger"></span>
+                <span asp-validation-for="Speciality" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DepartmentName" class="control-label"></label>
                 <input asp-for="DepartmentName" class="form-control" />
-                <span asp-validation-for="DepartmentName" class="text-danger"></span>
+                <span asp-validation-for="DepartmentName" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ImageURL" class="control-label"></label>
                 <input asp-for="ImageURL" class="form-control" />
-                <span asp-validation-for="ImageURL" class="text-danger"></span>
+                <span asp-validation-for="ImageURL" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
