--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Medicine/Create.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Medicine/Create.cshtml
@@ -11,21 +11,21 @@
 <div class="row white">
     <div class="col-md-4">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="text-primary"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input required asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <span asp-validation-for="Name" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Dosage" class="control-label"></label>
                 <input required asp-for="Dosage" class="form-control" />
-                <span asp-validation-for="Dosage" class="text-danger"></span>
+                <span asp-validation-for="Dosage" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Descritption" class="control-label"></label>
                 <input required asp-for="Descritption" class="form-control" />
-                <span asp-validation-for="Descritption" class="text-danger"></span>
+                <span asp-validation-for="Descritption" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
