--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Medicine/Edit.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Medicine/Edit.cshtml
@@ -11,22 +11,22 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="text-primary"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input required asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <span asp-validation-for="Name" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Dosage" class="control-label"></label>
                 <input required asp-for="Dosage" class="form-control" />
-                <span asp-validation-for="Dosage" class="text-danger"></span>
+                <span asp-validation-for="Dosage" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Descritption" class="control-label"></label>
                 <input required asp-for="Descritption" class="form-control" />
-                <span asp-validation-for="Descritption" class="text-danger"></span>
+                <span asp-validation-for="Descritption" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
