--- a/HealthAndCareHospital.Web/Areas/Doctor/Views/Appointment/Create.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Doctor/Views/Appointment/Create.cshtml
@@ -11,16 +11,16 @@
 <div class="row white">
     <div class="col-md-4">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="ModelOnly" class="text-primary"></div>
             <div class="form-group">
                 <label asp-for="@Model.PatientName" class="control-label"></label>
                 <input readonly asp-for="@Model.PatientName" class="form-control" value="@Model.PatientName" />
-                <span asp-validation-for="@Model.PatientName" class="text-danger"></span>
+                <span asp-validation-for="@Model.PatientName" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <label asp-for="@Model.DateTime" class="control-label"></label>
                 <input required asp-for="@Model.DateTime" class="form-control" value="@Model.DateTime" />
-                <span asp-validation-for="@Model.DateTime" class="text-danger"></span>
+                <span asp-validation-for="@Model.DateTime" class="text-primary"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
