--- a/HealthAndCareHospital.Web/Views/Account/Login.cshtml
+++ b/HealthAndCareHospital.Web/Views/Account/Login.cshtml
@@ -16,16 +16,16 @@
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
                 <h4>Use a local account to log in.</h4>
                 <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
+                <div asp-validation-summary="All" class="text-primary"></div>
                 <div class="form-group">
                     <label asp-for="Email"></label>
                     <input asp-for="Email" placeholder="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
+                    <span asp-validation-for="Email" class="text-primary"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Password"></label>
                     <input asp-for="Password" placeholder="Password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
+                    <span asp-validation-for="Password" class="text-primary"></span>
                 </div>
                 <div class="form-group">
                     <div class="checkbox">
