--- a/HealthAndCareHospital.Web/Views/Diseases/All.cshtml
+++ b/HealthAndCareHospital.Web/Views/Diseases/All.cshtml
@@ -34,17 +34,17 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model.DiseaseListing)
+        @foreach (var disease in Model.DiseaseListing)
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Name)
+                    @Html.DisplayFor(modelItem => disease.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Description)
+                    @Html.DisplayFor(modelItem => disease.Description)
                 </td>
                 <td>
-                    <a class="btn btn-default" href="/departments/all/">@item.DepartmentName</a>
+                    <a class="btn btn-default" href="/departments/all/">@disease.DepartmentName</a>
                 </td>
             </tr>
         }
