--- a/HealthAndCareHospital.Web/Views/Diseases/Search.cshtml
+++ b/HealthAndCareHospital.Web/Views/Diseases/Search.cshtml
@@ -25,17 +25,17 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model)
+            @foreach (var disease in Model)
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Name)
+                        @Html.DisplayFor(modelItem => disease.Name)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Description)
+                        @Html.DisplayFor(modelItem => disease.Description)
                     </td>
                     <td>
-                        <a class="btn btn-default" href="/departments/all/">@item.DepartmentName</a>
+                        <a class="btn btn-default" href="/departments/all/">@disease.DepartmentName</a>
                     </td>
                 </tr>
             }
