--- a/HealthAndCareHospital.Web/Views/Home/About.cshtml
+++ b/HealthAndCareHospital.Web/Views/Home/About.cshtml
@@ -5,7 +5,7 @@
 <h3>@ViewData["Message"]</h3>
 
 <section id="about" class="section-padding">
-    <div class="container">
+    <div class="container white">
         <div class="row">
             <div class="col-md-3 col-sm-4 col-xs-12">
                 <div class="section-title">
