--- a/HealthAndCareHospital.Web/Views/Medicines/All.cshtml
+++ b/HealthAndCareHospital.Web/Views/Medicines/All.cshtml
@@ -62,10 +62,10 @@
                 </td>
                 <td>
                     @(item.Descritption.Substring(0, 10))...
+                    <a class="btn btn-default" asp-action="Details" asp-route-id="@item.Id">Read More</a>
                 </td>
                 <td>
-                    <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a class="btn btn-success" asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
                     <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
