Added controllers tests

--- a/HealthAndCareHospital.Web/Areas/Admin/Views/Medicine/Details.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Admin/Views/Medicine/Details.cshtml
@@ -9,7 +9,7 @@
 <div>
     <h4>Medicine</h4>
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal white">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
