--- a/HealthAndCareHospital.Web/Areas/Doctor/Views/Appointment/All.cshtml
+++ b/HealthAndCareHospital.Web/Areas/Doctor/Views/Appointment/All.cshtml
@@ -6,6 +6,7 @@
 
 <h2>@ViewData["Title"]</h2>
 <br>
+<h2>New Appointments</h2>
 <table class="table white">
     <thead>
         <tr>
@@ -15,14 +16,19 @@
                 <th>
                     @Html.DisplayNameFor(model => model.DateTime)
                 </th>
-            <th>
-                Doctor
-            </th>
+            @if (this.User.IsInRole("Administrator"))
+            {
+                <th>
+                    Doctor
+                </th>
+            }
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
+    @if (item.DateTime > DateTime.UtcNow)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.PatientName)
@@ -30,14 +36,65 @@
             <td>
                 @Html.DisplayFor(modelItem => item.DateTime)
             </td>
+            @if (this.User.IsInRole("Administrator"))
+            {
             <td>
                 <a class="btn btn-primary" asp-area="" asp-controller="Departments"
                    asp-action="DoctorDetails" asp-route-id="@item.DoctorId">Doctor</a>
             </td>
+            }
             <td>
                 <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
-}
+        }
+    }
+    </tbody>
+</table>
+<br>
+<h2>Archive</h2>
+<table class="table white">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.PatientName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DateTime)
+            </th>
+            @if (this.User.IsInRole("Administrator"))
+            {
+                <th>
+                    Doctor
+                </th>
+            }
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            @if (item.DateTime < DateTime.UtcNow)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PatientName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DateTime)
+                    </td>
+                    @if (this.User.IsInRole("Administrator"))
+                    {
+                        <td>
+                            <a class="btn btn-primary" asp-area="" asp-controller="Departments"
+                               asp-action="DoctorDetails" asp-route-id="@item.DoctorId">Doctor</a>
+                        </td>
+                    }
+                    <td>
+                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                </tr>
+            }
+        }
     </tbody>
 </table>
